Before new template V3

--- a/LimenawebApp/Views/Commercial/Activityon_preview.cshtml
+++ b/LimenawebApp/Views/Commercial/Activityon_preview.cshtml
@@ -13,9 +13,7 @@
             if (objeto.id_resource == 95)
             {
 
-                <div class="custom-title-wrap bar-info">
-                    <div class="custom-title"><h4 class="text-secondary" style="text-align:center;">@objeto.fvalueText</h4></div>
-                </div>
+                <div style="background-color:ghostwhite"><h3 style="text-align:center;"><small class="text-muted">@objeto.fvalueText</small></h3></div>
             }
             <!--PARA IMAGENES -->
             if (objeto.id_resource == 5)
@@ -222,7 +220,7 @@
             if (objeto.id_resource == 1)
             {
                 <div class="custom-title-wrap bar-turquoise">
-                    <div class="custom-title"><h4 class="text-secondary" style="text-align:center;">@objeto.fsource</h4></div>
+                    <div class="custom-title"><h2 style="text-align:center;"><small class="text-muted">@objeto.fsource</small></h2></div>
                 </div>
             }
 
@@ -342,7 +340,7 @@
                     <div class="row">
                         <div class="col-md-12 grid-margin">
                             <hr />
-                            <h6 style="text-align:center;">@objeto.fsource</h6>
+                            <h4 style="text-align:center;"><small class="text-muted">@objeto.fsource</small></h4>
                             <hr />
                         </div>
                     </div>
