--- a/LimenawebApp/Views/Commercial/Credits_request.cshtml
+++ b/LimenawebApp/Views/Commercial/Credits_request.cshtml
@@ -173,7 +173,7 @@
 
 
                     <input type="file" data-changeflag="0" class="dropifyIMG" id="45" data-max-file-size-preview="15M">
-                    <img id="img_45" alt="your image" hidden />
+                    <img id="img_45" alt="your image"  hidden/>
                     <img id="resultimg_45" alt="your image" hidden />
                 </div>
                 <br />
@@ -181,7 +181,8 @@
                 <div class="col-md-12">
 
                     <input type="file" data-changeflag="0" class="dropifyIMG" id="90" data-max-file-size-preview="15M">
-
+                    <img id="img_90" alt="your image" hidden />
+                    <img id="resultimg_90" alt="your image" hidden />
                 </div>
                 <br />
 
