--- a/LimenawebApp/Views/Shared/Planning_calendarScript.cshtml
+++ b/LimenawebApp/Views/Shared/Planning_calendarScript.cshtml
@@ -250,11 +250,11 @@
                         var tooltip = '<div class="tooltipevent" style="width:200px;height:300px;font-size:10px;position:absolute;z-index:10001;">'+
                         '<div class="col-xl-12 col-md-12">' +
                             '<div class="card card-shadow mb-4">' +
-                                '<div class="card-header border-0">' +
-                                    '<div class="custom-title-wrap bar-primary">' +
-                            '<div class="custom-title" style="font-size:9px;">Total Each: ' + calEvent.AVGEach + '</div>' +
-                                    '</div>' +
-                                '</div>' +
+                            //    '<div class="card-header border-0">' +
+                            //        '<div class="custom-title-wrap bar-primary">' +
+                            //'<div class="custom-title" style="font-size:9px;">Total Each: ' + calEvent.AVGEach + '</div>' +
+                            //        '</div>' +
+                            //    '</div>' +
                                 '<div class="card-body">' +
                                     '<ul class="list-unstyled base-timeline">' +
                                         '<li class="time-dot-primary">' +
