--- a/LimenawebApp/Views/Home/Enroll.cshtml
+++ b/LimenawebApp/Views/Home/Enroll.cshtml
@@ -14,7 +14,16 @@
             <div class="row">
 
                 <div class="col-md-5">
+                    <h3>Sales Representative</h3>
 
+                    <select class="select-box" style="margin-bottom:10px !important" name="idrep" id="idrep">
+                        <option value="0">Select a sales representative</option>
+                        @foreach (var user in ViewBag.lstreps)
+        {
+                <option value="@user.ID_User">@user.Name @user.Lastname</option>
+
+}
+                    </select>
                     <h3>General</h3>
                     <input type="text" class="w-input" maxlength="256" name="CardName" placeholder="Empresa (*)" id="CardName" required="">
                     <input type="text" class="w-input" maxlength="256" name="Phone1" placeholder="Telefono (*)" id="Phone1" required="">
