--- a/LimenawebApp/Views/Shared/Scripts_main.cshtml
+++ b/LimenawebApp/Views/Shared/Scripts_main.cshtml
@@ -51,7 +51,17 @@
     <script src="~/Content/appcontent/assets/vendor/js-init/init-toastr.js"></script>*@
 
 <!--sweet alert-->
-<script src="~/Content/appcontent/assets/vendor/js-init/sweetalert.min.js"></script>
+@if (ViewBag.Title == "Distribuidora Limeña - New Customers")
+{
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+
+}
+else
+{
+    <script src="~/Content/appcontent/assets/vendor/js-init/sweetalert.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@8"></script>
+}
+
 
 
 <!--jquery validate-->
@@ -122,7 +132,7 @@
 
 
 }
-@if (ViewBag.Title == "Distribuidora Limeña - Quality Control")
+@if (ViewBag.Title == "Distribuidora Limeña - Quality Control" || ViewBag.Title == "Distribuidora Limeña - Survey")
 {
     <script src="~/Content/appcontent/assets/vendor/js-init/bootstrap-number-input.js"></script>
     <script type="text/javascript" src="~/Content/appcontent/assets/vendor/Editor_tables/editablegrid.js"></script>
@@ -215,7 +225,7 @@
 
 }
 
-<script src="https://cdn.jsdelivr.net/npm/sweetalert2@8"></script>
+
 <script src="https://cdn.datatables.net/fixedheader/3.1.2/js/dataTables.fixedHeader.min.js"></script>
 <script type="text/javascript" src="//gyrocode.github.io/jquery-datatables-checkboxes/1.2.11/js/dataTables.checkboxes.min.js"></script>
 <!--FOR MENU-->
@@ -243,9 +253,11 @@
                     document.getElementById("ss4_submenu").style.display = "block";
                     document.getElementById("ss5_submenu").style.display = "block";
                     document.getElementById("routes_submenu").style.display = "block";
+                    document.getElementById("tasks_submenu").style.display = "block";
                     document.getElementById("drop1").style.display = "block";
 
                     $("#quickAccess_salesreps").show();
+                    $("#quickAccess_salesreps2").show();
                 }
                 if (elementrol == "Sales Supervisor") {
                     document.getElementById("routes_submenu").style.display = "block";
@@ -254,6 +266,9 @@
                     document.getElementById("ss3_submenu").style.display = "block";
                     document.getElementById("ss4_submenu").style.display = "block";
                     document.getElementById("ss5_submenu").style.display = "block";
+                    document.getElementById("tasks_submenu").style.display = "block";
+                    document.getElementById("manag_menu").style.display = "block";
+                    document.getElementById("newcustomers_submenu").style.display = "block";
                 }
                 if (elementrol == "Credits Authorizer") {
                     document.getElementById("ss4_submenu").style.display = "block";
@@ -293,6 +308,7 @@
             document.getElementById("operpur_submenu").style.display = "block";
             document.getElementById("forms_submenu").style.display = "block";
             document.getElementById("newcustomers_submenu").style.display = "block";
+            document.getElementById("users_submenu").style.display = "block";
             document.getElementById("ss1_submenu").style.display = "block";
             document.getElementById("ss2_submenu").style.display = "block";
             document.getElementById("ss3_submenu").style.display = "block";
@@ -301,6 +317,8 @@
             document.getElementById("routes_submenu").style.display = "block";
             document.getElementById("drop1").style.display = "block";
             document.getElementById("reportop1_submenu").style.display = "block";
+            document.getElementById("tasks_submenu").style.display = "block";
+
         }
         if (element == "Customer") {
             document.getElementById("home_menuCustomers").style.display = "block";
